# sca-ih-tracker

./: .gitattributes  .gitignore  CLAUDE.md  conftest.py  justfile  pyproject.toml  requirements.txt
.claude/: README.md  settings.json
.claude/agents/: backend-dev.md  frontend-dev.md
.claude/commands/: be-dev.md  brief.md  fe-dev.md  gmorning.md  gnight.md  note.md  scope.md  wrap.md
.claude/memory/: feedback_lateral_vs_hierarchical.md  feedback_module_organization.md  feedback_router_patterns.md  feedback_schema_scoping.md  feedback_session_scope.md  feedback_session_segmentation.md  project_assumed_entry_closure.md
.claude/plans/: confirm-you-have-a-transient-bengio.md  i-want-to-revisit-refactored-valley.md  review-the-current-phase-cached-wilkes.md
app/: database.py  main.py
app/common/: config.py  crud.py  enums.py  errors.py  factories.py  formatters.py  models.py  responses.py  schemas.py  security.py  test_formatters.py  test_schemas.py
app/composites/: schemas.py
app/contractors/: models.py  schemas.py
app/contractors/router/: __init__.py  batch.py
app/database/: __init__.py  base.py  mixins.py
app/deliverables/: models.py  schemas.py
app/deliverables/router/: __init__.py  batch.py
app/employees/: models.py  schemas.py  test_roles.py  test_schemas.py
app/employees/router/: __init__.py  base.py  batch.py
app/employees/tests/: test_roles.py  test_schemas.py
app/hygienists/: models.py  schemas.py
app/hygienists/router/: __init__.py
app/projects/: models.py  router.py  schemas.py  services.py
app/projects/models/: __init__.py  base.py  links.py
app/projects/router/: __init__.py  base.py  hygienist.py  manager.py
app/projects/tests/: test_hygienist_links.py  test_manager_assignments.py
app/schools/: models.py  schemas.py  test_router.py
app/schools/router/: __init__.py  base.py  batch.py
app/schools/tests/: test_router.py
app/scripts/: db.py  tests.py
app/users/: dependencies.py  models.py  schemas.py
app/users/router/: auth.py  users.py
app/wa_codes/: models.py  schemas.py
app/wa_codes/router/: __init__.py  batch.py
app/work_auths/: models.py  router.py  schemas.py
app/work_auths/router/: __init__.py  _helpers.py  building_codes.py  project_codes.py
app/work_auths/tests/: test_wa_codes.py  test_work_auths.py
backend/: .coverage  .env.example  .gitignore  CLAUDE.md  HANDOFF.md  PLANNING-peer-navigation.md  PLANNING.md  ROADMAP.md  alembic.ini  conftest.py  requirements.txt  tests.http
backend/.claude/: settings.local.json
backend/app/: PATTERNS.md  main.py
backend/app/common/: README.md  config.py  crud.py  enums.py  errors.py  factories.py  guards.py  introspection.py  security.py
backend/app/composites/: schemas.py
backend/app/contractors/: models.py  schemas.py
backend/app/cprs/: README.md  __init__.py  models.py  router.py  schemas.py  service.py
backend/app/database/: __init__.py  mixins.py
backend/app/deliverables/: README.md  __init__.py  models.py  requirement_adapter.py  schemas.py
backend/app/dep_filings/: README.md  __init__.py  models.py  router.py  schemas.py  service.py
backend/app/employees/: README.md  models.py  schemas.py  service.py
backend/app/hygienists/: models.py  schemas.py
backend/app/lab_reports/: __init__.py  models.py  router.py  schemas.py  service.py
backend/app/lab_results/: README.md  models.py  schemas.py  service.py
backend/app/notes/: README.md  models.py  router.py  schemas.py  service.py
backend/app/project_requirements/: README.md  __init__.py  aggregator.py  models.py  router.py  schemas.py  services.py
backend/app/projects/: README.md  schemas.py  services.py
backend/app/required_docs/: README.md  __init__.py  models.py  router.py  schemas.py  (+1 more)
backend/data/: HANDOFF.md  ROADMAP.md  design_doc.md  handoff.md  notes.md  roadmap.md  testing_progress.md
backend/migrations/: env.py
data/: roadmap.md  testing_progress.md
data/seed/: contractors.csv  employees.csv
frontend/: .cta.json  .gitignore  .prettierignore  CLAUDE.md  HANDOFF.md  README.md  ROADMAP.md  components.json  eslint.config.js  openapi-ts.config.ts  package.json  pnpm-lock.yaml  prettier.config.js  tsconfig.json  vite.config.ts  vitest.config.ts
frontend/.storybook/: main.ts  preview.tsx
frontend/src/: PATTERNS.md  routeTree.gen.ts  router.tsx  styles.css
migrations/: env.py
migrations/versions/: 3d09df0c7a96_add_work_auth_project_codes_and_work_.py  bf7e5798598e_added_project_num_column_to_projects_.py  c0664b72d27b_add_work_auths_table.py  c9e1f3d72a08_add_hygienists_wa_codes_deliverables_employee_roles.py  f04316898db3_create_project_contractor_link_table.py
tests/: conftest.py
(+360 files in other folders)
